# bbk9588-bda-sdk

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  DATA_NOTICE.md  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: api_verification.yml  bug_report.yml  config.yml
.github/workflows/: release-emulator.yml  sdk-ci.yml
bda_packer/: README.md  __init__.py  build.py  header.py  validate.py  vx_icon.py
docs/: README.md  compatibility.md  getting_started.md  minesweeper_v1.md  releasing.md  sdk_api_layout.md
docs/tutorials/: custom_controls.md
docs/verified/: README.md  audio_capture_api.md  audio_pcm_api.md  controls_api.md  file_selector_api.md  fs_write_api.md  game_rendering_api.md  graphics_primitives_api.md  help_page_api.md  high_resolution_timer_api.md  input_polling_api.md  msgbox_api.md  picture_rendering_api.md  public_api_policy.md  raw_input_event_api.md  runtime_services_api.md  touch_position_api.md  touch_press_api.md  window_timer_api.md  (+1 more)
emu/: README.md  qemu_app.py
example/: README.md
reverse/: README.md  bda_api_catalog.py  bda_api_scan.py  bda_append_blob_patch_jump.py  bda_build.py  bda_compile_c.py  bda_copy_icons.py  bda_deploy_bundle.py  bda_disasm_preview.py  bda_extract_icons.py  bda_fix_header_checksum.py  bda_game_framework_scan.py  bda_header.py  bda_identity_scan.py  bda_inventory.py  bda_layout.py  bda_make_noop.py  bda_mix_header.py  bda_pack_minimal.py  bda_patch_bytes.py  bda_patch_main.py  bda_probe.py  bda_research_sdk.h  bda_sdk_usage.py  bda_set_category.py  bda_set_icon_png.py  bda_set_title.py  bda_strings_vx_scan.py  bda_table_call_scan.py  bda_table_globals.py  bda_validate.py  c200_api_disasm.py  c200_api_tables.py  c200_menu_scan.py  c200_scan.py  config_inf_add.py  config_inf_probe.py  dlx_build.py  dlx_extract.py  dlx_inspect.py  (+22 more)
scripts/: replace_emulator_bda.py  setup_toolchain.ps1  test_bda_in_emulator.ps1  usb_debug_host.py  verify_sdk.ps1
sdk/: README.md
tools/: README.md  usb_debug_host.py
(+440 files in other folders)
