[project]
name = "bbk9588-bda-sdk"
version = "0.0.0"
description = "BBK 9588 native BDA SDK experiments and QEMU system emulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "capstone>=5.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
  "build",
  "tools",
  "reverse/reports",
  "emu/qemu/source-overlay",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "E501",
]

[tool.pytest.ini_options]
testpaths = ["emu/test"]
python_files = ["test_*.py", "run_*_smoke.py"]
addopts = "-q"
