[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bbk9588-bda-packer"
version = "0.1.0a1"
description = "Compiler, packer, validator, and public headers for BBK 9588 native BDA applications"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "HelloClyde" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
reverse = ["capstone>=5.0.0"]
dev = [
  "build>=1.2.2",
  "capstone>=5.0.0",
]

[project.scripts]
bda-pack = "bda_packer.build:main"
bda-validate = "bda_packer.validate:main"
bda-icon = "bda_packer.vx_icon:main"

[project.urls]
Repository = "https://github.com/HelloClyde/bbk9588-bda-sdk"
Documentation = "https://github.com/HelloClyde/bbk9588-bda-sdk/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["bda_packer"]

[tool.hatch.build.targets.wheel.force-include]
"sdk/include" = "bda_packer/include"

[tool.hatch.build.targets.sdist]
include = [
  "/bda_packer",
  "/sdk/include",
  "/README.md",
  "/CHANGELOG.md",
  "/DATA_NOTICE.md",
  "/LICENSE",
  "/NOTICE",
  "/pyproject.toml",
]
